vertex-theme (20180519-0utopia1) UNRELEASED; urgency=medium

  * New upstream release from maintained fork:
    https://github.com/oberon-manjaro/vertex-theme

 -- James Lu <james@overdrivenetworks.com>  Tue, 09 Apr 2019 00:18:08 -0700

vertex-theme (20170128-0utopia1) unstable; urgency=medium

  * New upstream release.

 -- James Lu <bitflip3@gmail.com>  Wed, 12 Apr 2017 17:20:33 -0700

vertex-theme (20160329+git11~60a868e-0utopia1) unstable; urgency=medium

  * Initial Utopia Repository upload.

 -- James Lu <bitflip3@gmail.com>  Fri, 01 Jul 2016 23:54:53 -0700