@@ -1,13 +1,13 @@
 Format: https://www.debian.org/doc/packaging-manuals/copyright-format/1.0/
 Upstream-Name: vertex-theme
-Source: https://github.com/horst3180/vertex-theme
+Source: https://github.com/oberon-manjaro/vertex-theme
 
 Files: *
 Copyright: 2014-2016 horst3180
 License: GPL-3.0+
 
 Files: debian/*
-Copyright: 2016 James Lu <bitflip3@gmail.com>
+Copyright: 2016-2019 James Lu <james@overdrivenetworks.com>
 License: GPL-3.0+
 
 License: GPL-3.0+
